--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "private": true,
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jshint": "^2.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "run:dev": "nodemon index.js"
+    "run:dev": "nodemon index.js",
+    "test": "jshint index.js"
   }
 }
