--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "private": true,
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jshint": "^2.12.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "codecov": "^3.7.2",
+    "jshint": "^2.12.0",
     "mocha": "^8.1.2",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0"
