--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
   - 'node'
+install:
+  - npm install -g codecov
 script:
-  - yarn testcov
-after_success:
-  - yarn coverage
+  - nyc mocha --report lcovonly -- -R spec && codecov
