--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "codecov": "^3.7.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "codecov": "^3.7.2",
     "jshint": "^2.12.0",
     "mocha": "^8.1.2",
     "nodemon": "^2.0.4",
@@ -21,7 +21,7 @@
   "scripts": {
     "run:dev": "nodemon index.js",
     "test": "jshint index.js",
-    "testcov": "nyc mocha",
+    "testcov": "mocha",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   }
 }
