--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "istanbul": "^0.4.5",
     "jshint": "^2.12.0",
     "mocha": "^8.1.2",
     "nodemon": "^2.0.4",
@@ -19,7 +20,7 @@
   },
   "scripts": {
     "run:dev": "nodemon index.js",
-    "test": "jshint index.js && nyc mocha --report lcovonly -R spec && codecov",
+    "test": "jshint index.js && istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec",
     "testcov": "mocha",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   }
